// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as textarea renders 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid rgba(102,119,136,.2);
  border-radius: 5px;
  padding: 3px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c1 {
  display: grid;
  grid-gap: 4px;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::-moz-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4:-ms-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

<div
  class="c0 c1"
>
  <label>
    <span
      class="c2"
    />
  </label>
  <textarea
    class="c3 c4"
    placeholder="input placeholder"
    type="text"
  />
</div>
`;

exports[`renders 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid rgba(102,119,136,.2);
  border-radius: 5px;
  padding: 3px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c1 {
  display: grid;
  grid-gap: 4px;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::-moz-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4:-ms-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

<div
  class="c0 c1"
>
  <label>
    <span
      class="c2"
    />
  </label>
  <input
    class="c3 c4"
    placeholder="input placeholder"
    type="text"
  />
</div>
`;

exports[`validation error is passed as a prop error is shown when input is valid 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  border: 1px solid rgba(102,119,136,.2);
  border-radius: 5px;
  padding: 3px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c1 {
  display: grid;
  grid-gap: 4px;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  width: 100%;
}

.c4::-webkit-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::-moz-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4:-ms-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c4::placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

<div
  class="c0 c1"
>
  <label>
    <span
      class="c2"
    />
  </label>
  <input
    class="c3 c4"
    placeholder="input placeholder"
    type="text"
  />
  <span
    class="c2"
  >
    test error
  </span>
</div>
`;
